--- a/LaNoteEnchantée.html
+++ b/LaNoteEnchantée.html
@@ -11,7 +11,7 @@
   </head>
   <body>
   <header>
-      <div class = "LogoBackSparow"><i class="fas fa-chevron-left"></i></div>
+      <div class = "LogoBackSparow"><a href="index.html"><i class="fas fa-arrow-left"></i></a></div>
     <div class="LogoCentral"><img class = "LogoCentral__image" src="images/logo/ohmyfood.png" alt="Logo OhMyFood"></div>
 </header>
   
