mis en place de la police , et mise en page description

--- a/LeDéliceDesSens.html
+++ b/LeDéliceDesSens.html
@@ -15,7 +15,7 @@
     <div class="LogoCentral"><img class = "LogoCentral__image" src="images/logo/ohmyfood.png" alt="Logo OhMyFood"></div>
 </header>
   
-    <div class = "PhotoRestaurant"><img src="/images/restaurants/LaNoteEnchantée.jpg" alt="La palette du gout "></div>
+    <div class = "PhotoRestaurant"><img src="/images/restaurants/leDeliceDesSens.jpg" alt="La palette du gout "></div>
     <div class = "Menu">
       <div class = "Menu__NomEtCoeur"><h1>Le délice des sens</h1><i class="far fa-heart"></i></div>
       <div class = "Menu__Cath"><p class = "Menu__Cath__text">ENTRÈES</p><div class = "Menu__Cath__soulignement"></div></div>
