Modifications pour le Menu, il y a un souci s à modifier dans le HTML, faute de frappe

--- a/PaletteDuGout.html
+++ b/PaletteDuGout.html
@@ -34,7 +34,7 @@
         
       </div>
       <div class = "Menu__Vignette">
-        <div class = "Menue__Vignette__Block">
+        <div class = "Menu__Vignette__Block">
           <div class="Menu__Vignette__titre" ><p>Foie gras de canard-micuit</p></div>
         <div class= "Menu__Vignette__Description">
           <p>Et ses copeaux de truffe noire</p>
@@ -47,7 +47,7 @@
         </div>
         </div>
         <div class = "Menu__Vignette">
-          <div class = "Menue__Vignette__Block">
+          <div class = "Menu__Vignette__Block">
             <div class="Menu__Vignette__titre" ><p>Oeuf au plat</p></div>
           <div class= "Menu__Vignette__Description">
             <p>Assaisonné à la truffe sur lit de UN TRUC</p>
@@ -61,7 +61,7 @@
           </div>
           <div class = "Menu__Cath"><p class = "Menu__Cath__text">PLATS</p><div class = "Menu__Cath__soulignement"></div></div>
           <div class = "Menu__Vignette">
-            <div class = "Menue__Vignette__Block">
+            <div class = "Menu__Vignette__Block">
               <div class="Menu__Vignette__titre" ><p>Filet de boeuf aux herbes</p></div>
             <div class= "Menu__Vignette__Description">
               <p>Accompagné de sa ribambelle de légumes</p>
