Modifications pour animation Validator vignette. Il faut remodifier le Html , palette du gout done

--- a/LaNoteEnchantée.html
+++ b/LaNoteEnchantée.html
@@ -46,19 +46,23 @@
           <div class = "Menu__Vignette__ValidatorEtPrix__Validator"></div>
         </div>
         </div>
+
         <div class = "Menu__Vignette">
-          <div class = "Menue__Vignette__Block">
+
+          <div class = "Menu__Vignette__Block">
             <div class="Menu__Vignette__titre" ><p>Homard et espuma de UN TRUC</p></div>
           <div class= "Menu__Vignette__Description">
             <p>Mariné aux zests d'orange</p>
           </div>
           </div>
+
           <div class = "Menu__Vignette__ValidatorEtPrix">
             <div class = "Menu__Vignette__ValidatorEtPrix__Prix">
               <p>20€</p></div>
             <div class = "Menu__Vignette__ValidatorEtPrix__Validator"></div>
           </div>
           </div>
+
           <div class = "Menu__Vignette">
             <div class = "Menue__Vignette__Block">
               <div class="Menu__Vignette__titre" ><p>Foie gras de canard cuit entier</p></div>
