--- a/PaletteDuGout.html
+++ b/PaletteDuGout.html
@@ -20,7 +20,7 @@
       <div class = "Menu__NomEtCoeur"><h1>La palette du goût</h1><i class="far fa-heart"></i></div>
       <div class = "Menu__Cath"><p class = "Menu__Cath__text">ENTRÈES</p><div class = "Menu__Cath__soulignement"></div></div>
       <div class = "Menu__Vignette">
-        <div class = "Menue__Vignette__Block">
+        <div class = "Menu__Vignette__Block">
           <div class="Menu__Vignette__titre" ><p>Fricassée d'escargot</p></div>
         <div class= "Menu__Vignette__Description">
           <p>Au piment d'espelette</p>
@@ -29,7 +29,9 @@
         <div class = "Menu__Vignette__ValidatorEtPrix">
           <div class = "Menu__Vignette__ValidatorEtPrix__Prix">
             <p>25€</p></div>
-          <div class = "Menu__Vignette__ValidatorEtPrix__Validator"></div>
+          <div class = "Menu__Vignette__ValidatorEtPrix__Validator">
+            <div class="Menu__Vignette__ValidatorEtPrix__Validator__Icon"><i class="fas fa-check-circle"></i></div>
+          </div>
         </div>
         
       </div>
@@ -43,7 +45,9 @@
         <div class = "Menu__Vignette__ValidatorEtPrix">
           <div class = "Menu__Vignette__ValidatorEtPrix__Prix">
             <p>35€</p></div>
-          <div class = "Menu__Vignette__ValidatorEtPrix__Validator"></div>
+          <div class = "Menu__Vignette__ValidatorEtPrix__Validator">
+            <div class="Menu__Vignette__ValidatorEtPrix__Validator__Icon"><i class="fas fa-check-circle"></i></div>
+          </div>
         </div>
         </div>
         <div class = "Menu__Vignette">
@@ -56,7 +60,7 @@
           <div class = "Menu__Vignette__ValidatorEtPrix">
             <div class = "Menu__Vignette__ValidatorEtPrix__Prix">
               <p>20€</p></div>
-            <div class = "Menu__Vignette__ValidatorEtPrix__Validator"></div>
+            <div class = "Menu__Vignette__ValidatorEtPrix__Validator"><div class="Menu__Vignette__ValidatorEtPrix__Validator__Icon"><i class="fas fa-check-circle"></i></div></div>
           </div>
           </div>
           <div class = "Menu__Cath"><p class = "Menu__Cath__text">PLATS</p><div class = "Menu__Cath__soulignement"></div></div>
@@ -70,11 +74,11 @@
             <div class = "Menu__Vignette__ValidatorEtPrix">
               <div class = "Menu__Vignette__ValidatorEtPrix__Prix">
                 <p>40€</p></div>
-              <div class = "Menu__Vignette__ValidatorEtPrix__Validator"></div>
+              <div class = "Menu__Vignette__ValidatorEtPrix__Validator"><div class="Menu__Vignette__ValidatorEtPrix__Validator__Icon"><i class="fas fa-check-circle"></i></div></div>
             </div>
             </div>
             <div class = "Menu__Vignette">
-              <div class = "Menue__Vignette__Block">
+              <div class = "Menu__Vignette__Block">
                 <div class="Menu__Vignette__titre" ><p>Parmentier de queue de boeuf</p></div>
               <div class= "Menu__Vignette__Description">
                 <p> À la truffe noire sur sa purée de panais</p>
@@ -83,11 +87,11 @@
               <div class = "Menu__Vignette__ValidatorEtPrix">
                 <div class = "Menu__Vignette__ValidatorEtPrix__Prix">
                   <p>35€</p></div>
-                <div class = "Menu__Vignette__ValidatorEtPrix__Validator"></div>
+                <div class = "Menu__Vignette__ValidatorEtPrix__Validator"><div class="Menu__Vignette__ValidatorEtPrix__Validator__Icon"><i class="fas fa-check-circle"></i></div></div>
               </div>
               </div>
               <div class = "Menu__Vignette">
-                <div class = "Menue__Vignette__Block">
+                <div class = "Menu__Vignette__Block">
                   <div class="Menu__Vignette__titre" ><p> Filets de Turbot</p></div>
                 <div class= "Menu__Vignette__Description">
                   <p>Aux agrumes</p>
@@ -96,12 +100,12 @@
                 <div class = "Menu__Vignette__ValidatorEtPrix">
                   <div class = "Menu__Vignette__ValidatorEtPrix__Prix">
                     <p>44€</p></div>
-                  <div class = "Menu__Vignette__ValidatorEtPrix__Validator"></div>
+                  <div class = "Menu__Vignette__ValidatorEtPrix__Validator"><div class="Menu__Vignette__ValidatorEtPrix__Validator__Icon"><i class="fas fa-check-circle"></i></div></div>
                 </div>
                 </div>
                 <div class = "Menu__Cath"><p class = "Menu__Cath__text">DESSERTS</p><div class = "Menu__Cath__soulignement"></div></div>
                 <div class = "Menu__Vignette">
-                  <div class = "Menue__Vignette__Block">
+                  <div class = "Menu__Vignette__Block">
                     <div class="Menu__Vignette__titre" ><p> Paris-Brest</p></div>
                   <div class= "Menu__Vignette__Description">
                     <p> Revisité</p>
@@ -110,11 +114,11 @@
                   <div class = "Menu__Vignette__ValidatorEtPrix">
                     <div class = "Menu__Vignette__ValidatorEtPrix__Prix">
                       <p>18€</p></div>
-                    <div class = "Menu__Vignette__ValidatorEtPrix__Validator"></div>
+                    <div class = "Menu__Vignette__ValidatorEtPrix__Validator"><div class="Menu__Vignette__ValidatorEtPrix__Validator__Icon"><i class="fas fa-check-circle"></i></div></div>
                   </div>
                   </div>
                   <div class = "Menu__Vignette">
-                    <div class = "Menue__Vignette__Block">
+                    <div class = "Menu__Vignette__Block">
                       <div class="Menu__Vignette__titre" ><p>Macaron au chocolat d'exception</p></div>
                     <div class= "Menu__Vignette__Description">
                       <p>Et glace à la vanille de Madagascar</p>
@@ -123,11 +127,11 @@
                     <div class = "Menu__Vignette__ValidatorEtPrix">
                       <div class = "Menu__Vignette__ValidatorEtPrix__Prix">
                         <p>22€</p></div>
-                      <div class = "Menu__Vignette__ValidatorEtPrix__Validator"></div>
+                      <div class = "Menu__Vignette__ValidatorEtPrix__Validator"><div class="Menu__Vignette__ValidatorEtPrix__Validator__Icon"><i class="fas fa-check-circle"></i></div></div>
                     </div>
                     </div>
                     <div class = "Menu__Vignette">
-                      <div class = "Menue__Vignette__Block">
+                      <div class = "Menu__Vignette__Block">
                         <div class="Menu__Vignette__titre" ><p>Mousse au chocolat</p></div>
                       <div class= "Menu__Vignette__Description">
                         <p> Au piment d'Espelette et à la truffe noire</p>
@@ -136,7 +140,7 @@
                       <div class = "Menu__Vignette__ValidatorEtPrix">
                         <div class = "Menu__Vignette__ValidatorEtPrix__Prix">
                           <p>23€</p></div>
-                        <div class = "Menu__Vignette__ValidatorEtPrix__Validator"></div>
+                        <div class = "Menu__Vignette__ValidatorEtPrix__Validator"><div class="Menu__Vignette__ValidatorEtPrix__Validator__Icon"><i class="fas fa-check-circle"></i></div></div>
                       </div>
                       </div>
                       <div class = "Bouton">
