--- a/PaletteDuGout.html
+++ b/PaletteDuGout.html
@@ -17,7 +17,7 @@
   
     <div class = "PhotoRestaurant"><img src="/images/restaurants/laPaletteDuGout.jpg" alt="La palette du gout "></div>
     <div class = "Menu">
-      <div class = "Menu__NomEtCoeur"><h1>La palette du goût</h1><i class="far fa-heart"></i></div>
+      <div class = "Menu__NomEtCoeur"><h1>La palette du goût</h1><div class = "Menu__NomEtCoeur__logo"><i class="far fa-heart"></i><i class="fas fa-heart"></i><div class ="Menu__NomEtCoeur__logo__ecran"></div></div></div>
       <div class = "Menu__Cath"><p class = "Menu__Cath__text">ENTRÈES</p><div class = "Menu__Cath__soulignement"></div></div>
       <div class = "Menu__Vignette">
         <div class = "Menu__Vignette__Block">
