--- a/LaNoteEnchantée.html
+++ b/LaNoteEnchantée.html
@@ -17,7 +17,7 @@
   
     <div class = "PhotoRestaurant"><img src="/images/restaurants/LaNoteEnchantée.jpg" alt="La palette du gout "></div>
     <div class = "Menu">
-      <div class = "Menu__NomEtCoeur"><h1>La note enchantée</h1><i class="far fa-heart"></i></div>
+      <div class = "Menu__NomEtCoeur"><h1>La note enchantée</h1><div class = "Menu__NomEtCoeur__logo"><i class="far fa-heart"></i><i class="fas fa-heart"></i><div class ="Menu__NomEtCoeur__logo__ecran"></div></div></div>
       <div class = "Menu__Cath"><p class = "Menu__Cath__text">ENTRÈES</p><div class = "Menu__Cath__soulignement"></div></div>
       <div class = "Menu__Vignette">
         <div class = "Menue__Vignette__Block">
@@ -29,7 +29,7 @@
         <div class = "Menu__Vignette__ValidatorEtPrix">
           <div class = "Menu__Vignette__ValidatorEtPrix__Prix">
             <p>25€</p></div>
-          <div class = "Menu__Vignette__ValidatorEtPrix__Validator"></div>
+          <div class = "Menu__Vignette__ValidatorEtPrix__Validator"><div class="Menu__Vignette__ValidatorEtPrix__Validator__Icon"><i class="fas fa-check-circle"></i></div></div>
         </div>
         
       </div>
@@ -43,7 +43,7 @@
         <div class = "Menu__Vignette__ValidatorEtPrix">
           <div class = "Menu__Vignette__ValidatorEtPrix__Prix">
             <p>35€</p></div>
-          <div class = "Menu__Vignette__ValidatorEtPrix__Validator"></div>
+          <div class = "Menu__Vignette__ValidatorEtPrix__Validator"><div class="Menu__Vignette__ValidatorEtPrix__Validator__Icon"><i class="fas fa-check-circle"></i></div></div>
         </div>
         </div>
 
@@ -59,7 +59,7 @@
           <div class = "Menu__Vignette__ValidatorEtPrix">
             <div class = "Menu__Vignette__ValidatorEtPrix__Prix">
               <p>20€</p></div>
-            <div class = "Menu__Vignette__ValidatorEtPrix__Validator"></div>
+            <div class = "Menu__Vignette__ValidatorEtPrix__Validator"><div class="Menu__Vignette__ValidatorEtPrix__Validator__Icon"><i class="fas fa-check-circle"></i></div></div>
           </div>
           </div>
 
@@ -73,7 +73,7 @@
             <div class = "Menu__Vignette__ValidatorEtPrix">
               <div class = "Menu__Vignette__ValidatorEtPrix__Prix">
                 <p>35€</p></div>
-              <div class = "Menu__Vignette__ValidatorEtPrix__Validator"></div>
+              <div class = "Menu__Vignette__ValidatorEtPrix__Validator"><div class="Menu__Vignette__ValidatorEtPrix__Validator__Icon"><i class="fas fa-check-circle"></i></div></div>
             </div>
             </div>
           <div class = "Menu__Cath"><p class = "Menu__Cath__text">PLATS</p><div class = "Menu__Cath__soulignement"></div></div>
@@ -87,7 +87,7 @@
             <div class = "Menu__Vignette__ValidatorEtPrix">
               <div class = "Menu__Vignette__ValidatorEtPrix__Prix">
                 <p>40€</p></div>
-              <div class = "Menu__Vignette__ValidatorEtPrix__Validator"></div>
+              <div class = "Menu__Vignette__ValidatorEtPrix__Validator"><div class="Menu__Vignette__ValidatorEtPrix__Validator__Icon"><i class="fas fa-check-circle"></i></div></div>
             </div>
             </div>
             <div class = "Menu__Vignette">
@@ -100,7 +100,7 @@
               <div class = "Menu__Vignette__ValidatorEtPrix">
                 <div class = "Menu__Vignette__ValidatorEtPrix__Prix">
                   <p>35€</p></div>
-                <div class = "Menu__Vignette__ValidatorEtPrix__Validator"></div>
+                <div class = "Menu__Vignette__ValidatorEtPrix__Validator"><div class="Menu__Vignette__ValidatorEtPrix__Validator__Icon"><i class="fas fa-check-circle"></i></div></div>
               </div>
               </div>
               <div class = "Menu__Vignette">
@@ -113,7 +113,7 @@
                 <div class = "Menu__Vignette__ValidatorEtPrix">
                   <div class = "Menu__Vignette__ValidatorEtPrix__Prix">
                     <p>44€</p></div>
-                  <div class = "Menu__Vignette__ValidatorEtPrix__Validator"></div>
+                  <div class = "Menu__Vignette__ValidatorEtPrix__Validator"><div class="Menu__Vignette__ValidatorEtPrix__Validator__Icon"><i class="fas fa-check-circle"></i></div></div>
                 </div>
                 </div>
                 <div class = "Menu__Cath"><p class = "Menu__Cath__text">DESSERTS</p><div class = "Menu__Cath__soulignement"></div></div>
@@ -127,7 +127,7 @@
                   <div class = "Menu__Vignette__ValidatorEtPrix">
                     <div class = "Menu__Vignette__ValidatorEtPrix__Prix">
                       <p>18€</p></div>
-                    <div class = "Menu__Vignette__ValidatorEtPrix__Validator"></div>
+                    <div class = "Menu__Vignette__ValidatorEtPrix__Validator"><div class="Menu__Vignette__ValidatorEtPrix__Validator__Icon"><i class="fas fa-check-circle"></i></div></div>
                   </div>
                   </div>
                   <div class = "Menu__Vignette">
@@ -140,7 +140,7 @@
                     <div class = "Menu__Vignette__ValidatorEtPrix">
                       <div class = "Menu__Vignette__ValidatorEtPrix__Prix">
                         <p>22€</p></div>
-                      <div class = "Menu__Vignette__ValidatorEtPrix__Validator"></div>
+                      <div class = "Menu__Vignette__ValidatorEtPrix__Validator"><div class="Menu__Vignette__ValidatorEtPrix__Validator__Icon"><i class="fas fa-check-circle"></i></div></div>
                     </div>
                     </div>
                     <div class = "Menu__Vignette">
@@ -153,7 +153,7 @@
                       <div class = "Menu__Vignette__ValidatorEtPrix">
                         <div class = "Menu__Vignette__ValidatorEtPrix__Prix">
                           <p>23€</p></div>
-                        <div class = "Menu__Vignette__ValidatorEtPrix__Validator"></div>
+                        <div class = "Menu__Vignette__ValidatorEtPrix__Validator"><div class="Menu__Vignette__ValidatorEtPrix__Validator__Icon"><i class="fas fa-check-circle"></i></div></div>
                       </div>
                       </div>
                       <div class = "Bouton">
