Modifications HTML W3C ok

--- a/LaNoteEnchantée.html
+++ b/LaNoteEnchantée.html
@@ -50,7 +50,7 @@
         <div class = "Menu__Vignette">
 
           <div class = "Menu__Vignette__Block">
-            <div class="Menu__Vignette__titre" ><p>Homard et espuma de UN TRUC</p></div>
+            <div class="Menu__Vignette__titre" ><p>Homard et espuma de potiron</p></div>
           <div class= "Menu__Vignette__Description">
             <p>Mariné aux zests d'orange</p>
           </div>
