--- a/LeDéliceDesSens.html
+++ b/LeDéliceDesSens.html
@@ -64,7 +64,7 @@
           
           <div class = "Menu__Cath"><p class = "Menu__Cath__text">PLATS</p><div class = "Menu__Cath__soulignement"></div></div>
           <div class = "Menu__Vignette">
-            <div class = "Menue__Vignette__Block">
+            <div class = "Menu__Vignette__Block">
               <div class="Menu__Vignette__titre" ><p>Poulet rôti aux herbes de provence</p></div>
             <div class= "Menu__Vignette__Description">
               <p>Et sa créme de truffe</p>
