Mise en Page pour Desktop Ok

--- a/ALaFrançaise.html
+++ b/ALaFrançaise.html
@@ -2,6 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css" media="all" rel="stylesheet">
     <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all" rel="stylesheet">
     <link href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all" rel="stylesheet">
@@ -20,7 +21,7 @@
       <div class = "Menu__NomEtCoeur"><h1>À la française</h1><div class = "Menu__NomEtCoeur__logo"><i class="far fa-heart"></i><i class="fas fa-heart"></i><div class ="Menu__NomEtCoeur__logo__ecran"></div></div></div>
       <div class = "Menu__Cath"><p class = "Menu__Cath__text">ENTRÈES</p><div class = "Menu__Cath__soulignement"></div></div>
       <div class = "Menu__Vignette">
-        <div class = "Menue__Vignette__Block">
+        <div class = "Menu__Vignette__Block">
           <div class="Menu__Vignette__titre" ><p>Tartare de poulpe acidulé</p></div>
         <div class= "Menu__Vignette__Description">
           <p>Aux zest d'orange</p>
@@ -34,7 +35,7 @@
         
       </div>
       <div class = "Menu__Vignette">
-        <div class = "Menue__Vignette__Block">
+        <div class = "Menu__Vignette__Block">
           <div class="Menu__Vignette__titre" ><p>Velouté de légumes d'antan</p></div>
         <div class= "Menu__Vignette__Description">
           <p>Carotte, panais, topinambour</p>
@@ -47,7 +48,7 @@
         </div>
         </div>
         <div class = "Menu__Vignette">
-          <div class = "Menue__Vignette__Block">
+          <div class = "Menu__Vignette__Block">
             <div class="Menu__Vignette__titre" ><p>Soupe à l'oignon</p></div>
           <div class= "Menu__Vignette__Description">
             <p>Revisitée</p>
@@ -61,7 +62,7 @@
           </div>
           <div class = "Menu__Cath"><p class = "Menu__Cath__text">PLATS</p><div class = "Menu__Cath__soulignement"></div></div>
           <div class = "Menu__Vignette">
-            <div class = "Menue__Vignette__Block">
+            <div class = "Menu__Vignette__Block">
               <div class="Menu__Vignette__titre" ><p>Coquilles Saint-Jacques</p></div>
             <div class= "Menu__Vignette__Description">
               <p>Accompagné d'une purée de panais</p>
@@ -74,7 +75,7 @@
             </div>
             </div>
             <div class = "Menu__Vignette">
-              <div class = "Menue__Vignette__Block">
+              <div class = "Menu__Vignette__Block">
                 <div class="Menu__Vignette__titre" ><p>Magret de canard</p></div>
               <div class= "Menu__Vignette__Description">
                 <p>Et parmentier de pommes de terres</p>
@@ -87,7 +88,7 @@
               </div>
               </div>
               <div class = "Menu__Vignette">
-                <div class = "Menue__Vignette__Block">
+                <div class = "Menu__Vignette__Block">
                   <div class="Menu__Vignette__titre" ><p>Pigeonneau d'îlle-et-Vilaine</p></div>
                 <div class= "Menu__Vignette__Description">
                   <p>Sur son lit de gnocchis aux légumes</p>
@@ -101,7 +102,7 @@
                 </div>
                 <div class = "Menu__Cath"><p class = "Menu__Cath__text">DESSERTS</p><div class = "Menu__Cath__soulignement"></div></div>
                 <div class = "Menu__Vignette">
-                  <div class = "Menue__Vignette__Block">
+                  <div class = "Menu__Vignette__Block">
                     <div class="Menu__Vignette__titre" ><p>Pétales de violettes glacés</p></div>
                   <div class= "Menu__Vignette__Description">
                     <p>Et purée de noisettes</p>
@@ -114,7 +115,7 @@
                   </div>
                   </div>
                   <div class = "Menu__Vignette">
-                    <div class = "Menue__Vignette__Block">
+                    <div class = "Menu__Vignette__Block">
                       <div class="Menu__Vignette__titre" ><p>Fondant au chocolat</p></div>
                     <div class= "Menu__Vignette__Description">
                       <p>Revisité</p>
@@ -127,7 +128,7 @@
                     </div>
                     </div>
                     <div class = "Menu__Vignette">
-                      <div class = "Menue__Vignette__Block">
+                      <div class = "Menu__Vignette__Block">
                         <div class="Menu__Vignette__titre" ><p>Millefeuille croustillant</p></div>
                       <div class= "Menu__Vignette__Description">
                         <p>Myrtilles et pâte d'amande</p>
