--- a/LaNoteEnchantée.html
+++ b/LaNoteEnchantée.html
@@ -2,6 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css" media="all" rel="stylesheet">
     <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all" rel="stylesheet">
     <link href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all" rel="stylesheet">
@@ -20,7 +21,7 @@
       <div class = "Menu__NomEtCoeur"><h1>La note enchantée</h1><div class = "Menu__NomEtCoeur__logo"><i class="far fa-heart"></i><i class="fas fa-heart"></i><div class ="Menu__NomEtCoeur__logo__ecran"></div></div></div>
       <div class = "Menu__Cath"><p class = "Menu__Cath__text">ENTRÈES</p><div class = "Menu__Cath__soulignement"></div></div>
       <div class = "Menu__Vignette">
-        <div class = "Menue__Vignette__Block">
+        <div class = "Menu__Vignette__Block">
           <div class="Menu__Vignette__titre" ><p>Ravioles de foie gras</p></div>
         <div class= "Menu__Vignette__Description">
           <p>Accompagnés de leur crème à la truffe</p>
@@ -34,7 +35,7 @@
         
       </div>
       <div class = "Menu__Vignette">
-        <div class = "Menue__Vignette__Block">
+        <div class = "Menu__Vignette__Block">
           <div class="Menu__Vignette__titre" ><p>Caviar osciètre</p></div>
         <div class= "Menu__Vignette__Description">
           <p>Sur blini à la farine de blé noir</p>
@@ -64,7 +65,7 @@
           </div>
 
           <div class = "Menu__Vignette">
-            <div class = "Menue__Vignette__Block">
+            <div class = "Menu__Vignette__Block">
               <div class="Menu__Vignette__titre" ><p>Foie gras de canard cuit entier</p></div>
             <div class= "Menu__Vignette__Description">
               <p>Confiture de figue et pain toasté</p>
@@ -78,7 +79,7 @@
             </div>
           <div class = "Menu__Cath"><p class = "Menu__Cath__text">PLATS</p><div class = "Menu__Cath__soulignement"></div></div>
           <div class = "Menu__Vignette">
-            <div class = "Menue__Vignette__Block">
+            <div class = "Menu__Vignette__Block">
               <div class="Menu__Vignette__titre" ><p>Noix de coquilles Saint-Jacques</p></div>
             <div class= "Menu__Vignette__Description">
               <p>Sur lit de purée de céleri-rave</p>
@@ -91,7 +92,7 @@
             </div>
             </div>
             <div class = "Menu__Vignette">
-              <div class = "Menue__Vignette__Block">
+              <div class = "Menu__Vignette__Block">
                 <div class="Menu__Vignette__titre" ><p>Langoustine poêlée</p></div>
               <div class= "Menu__Vignette__Description">
                 <p>Purés de patate douce</p>
@@ -104,7 +105,7 @@
               </div>
               </div>
               <div class = "Menu__Vignette">
-                <div class = "Menue__Vignette__Block">
+                <div class = "Menu__Vignette__Block">
                   <div class="Menu__Vignette__titre" ><p>Mijoté de queue de boeuf</p></div>
                 <div class= "Menu__Vignette__Description">
                   <p>Et riz sauvage aux zests de citron</p>
@@ -118,7 +119,7 @@
                 </div>
                 <div class = "Menu__Cath"><p class = "Menu__Cath__text">DESSERTS</p><div class = "Menu__Cath__soulignement"></div></div>
                 <div class = "Menu__Vignette">
-                  <div class = "Menue__Vignette__Block">
+                  <div class = "Menu__Vignette__Block">
                     <div class="Menu__Vignette__titre" ><p>Macaron noisette et chocolat</p></div>
                   <div class= "Menu__Vignette__Description">
                     <p>Glace au caramel brun et sel de Guérande</p>
@@ -131,7 +132,7 @@
                   </div>
                   </div>
                   <div class = "Menu__Vignette">
-                    <div class = "Menue__Vignette__Block">
+                    <div class = "Menu__Vignette__Block">
                       <div class="Menu__Vignette__titre" ><p>Baba au rhum revisité</p></div>
                     <div class= "Menu__Vignette__Description">
                       <p>Avec son coulis de citron</p>
@@ -144,7 +145,7 @@
                     </div>
                     </div>
                     <div class = "Menu__Vignette">
-                      <div class = "Menue__Vignette__Block">
+                      <div class = "Menu__Vignette__Block">
                         <div class="Menu__Vignette__titre" ><p>Tarte au citron meringuée</p></div>
                       <div class= "Menu__Vignette__Description">
                         <p>Destructurée</p>
