--- a/LeDéliceDesSens.html
+++ b/LeDéliceDesSens.html
@@ -2,6 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css" media="all" rel="stylesheet">
     <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all" rel="stylesheet">
     <link href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all" rel="stylesheet">
@@ -20,7 +21,7 @@
       <div class = "Menu__NomEtCoeur"><h1>Le délice des sens</h1><div class = "Menu__NomEtCoeur__logo"><i class="far fa-heart"></i><i class="fas fa-heart"></i><div class ="Menu__NomEtCoeur__logo__ecran"></div></div></div>
       <div class = "Menu__Cath"><p class = "Menu__Cath__text">ENTRÈES</p><div class = "Menu__Cath__soulignement"></div></div>
       <div class = "Menu__Vignette">
-        <div class = "Menue__Vignette__Block">
+        <div class = "Menu__Vignette__Block">
           <div class="Menu__Vignette__titre" ><p>Tartare de thon</p></div>
         <div class= "Menu__Vignette__Description">
           <p>Assaisonné au yuzu</p>
@@ -36,7 +37,7 @@
         
       </div>
       <div class = "Menu__Vignette">
-        <div class = "Menue__Vignette__Block">
+        <div class = "Menu__Vignette__Block">
           <div class="Menu__Vignette__titre" ><p>Bouchée de homard croustillant</p></div>
         <div class= "Menu__Vignette__Description">
           <p>Et sa farandole de petits légumes</p>
@@ -49,7 +50,7 @@
         </div>
         </div>
         <div class = "Menu__Vignette">
-          <div class = "Menue__Vignette__Block">
+          <div class = "Menu__Vignette__Block">
             <div class="Menu__Vignette__titre" ><p>Velouté de cèpes</p></div>
           <div class= "Menu__Vignette__Description">
             <p>Aux truffes</p>
@@ -77,7 +78,7 @@
             </div>
             </div>
             <div class = "Menu__Vignette">
-              <div class = "Menue__Vignette__Block">
+              <div class = "Menu__Vignette__Block">
                 <div class="Menu__Vignette__titre" ><p>Langouste rôtie</p></div>
               <div class= "Menu__Vignette__Description">
                 <p>Et ses légumes de saison</p>
@@ -90,7 +91,7 @@
               </div>
               </div>
               <div class = "Menu__Vignette">
-                <div class = "Menue__Vignette__Block">
+                <div class = "Menu__Vignette__Block">
                   <div class="Menu__Vignette__titre" ><p>Côte de boeuf angus</p></div>
                 <div class= "Menu__Vignette__Description">
                   <p>Et sa purée de panais</p>
@@ -104,7 +105,7 @@
                 </div>
                 <div class = "Menu__Cath"><p class = "Menu__Cath__text">DESSERTS</p><div class = "Menu__Cath__soulignement"></div></div>
                 <div class = "Menu__Vignette">
-                  <div class = "Menue__Vignette__Block">
+                  <div class = "Menu__Vignette__Block">
                     <div class="Menu__Vignette__titre" ><p>Farandole de desserts</p></div>
                   <div class= "Menu__Vignette__Description">
                     <p>Du chef</p>
@@ -117,7 +118,7 @@
                   </div>
                   </div>
                   <div class = "Menu__Vignette">
-                    <div class = "Menue__Vignette__Block">
+                    <div class = "Menu__Vignette__Block">
                       <div class="Menu__Vignette__titre" ><p>Crème brûlée</p></div>
                     <div class= "Menu__Vignette__Description">
                       <p>Revisitée</p>
@@ -130,7 +131,7 @@
                     </div>
                     </div>
                     <div class = "Menu__Vignette">
-                      <div class = "Menue__Vignette__Block">
+                      <div class = "Menu__Vignette__Block">
                         <div class="Menu__Vignette__titre" ><p>Tiramisu</p></div>
                       <div class= "Menu__Vignette__Description">
                         <p>À la noisette</p>
