--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css" media="all" rel="stylesheet">
     <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all" rel="stylesheet">
     <link href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all" rel="stylesheet">
@@ -45,8 +46,9 @@
           <div class = "vignettesFonctionnement__Degustez__text"><p>Dégustez au restaurant</p></div>
         </div>
       </div>
+      <p class = "Restaurants__titre">Restaurants</p>
       <div class = "Restaurants">
-        <p class = "Restaurants__titre">Restaurants</p>
+        
       <div class = "Restaurants__vignette">
         <a href ="PaletteDuGout.html"><div class = "Restaurants__vignette__image">
           <div class = "Restaurants__vignette__image__Nouveau"><p>Nouveau</p></div>
@@ -85,7 +87,7 @@
         <a href ="ALaFrançaise.html"><div class = "Restaurants__vignette__image"><img src= "images/restaurants/ALaFrancaise.jpg" alt= "La palette du goût"></div></a>
         <div class = "Restaurants__vignette__description">
           <a href ="ALaFrançaise.html"><div class = "Restaurants__vignette__description__text">
-            <p class = "Restaurants__vignette__description__text__Nom">À la française</p>
+            <p class = "Restaurants__vignette__description__text__Nom">À  la  française   </p>
             <p class = "Restaurants__vignette__description__text__Adresse">Cité Rouge</p>
           
         </div></a>
