Loading ok et animations ok

--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <script src="script.js"></script>
   </head>
 <body>
+  <div class = "AnimationLoadingPage">
+    <div class = "AnimationLoadingPage__image">
+      <img src="images/logo/ohmyfood.png" alt="logo oh my food">
+    </div>
+    <div class ="AnimationLoadingPage__boules">
+      <div class = "AnimationLoadingPage__boules__boule1"></div>
+      <div class = "AnimationLoadingPage__boules__boule2"></div>
+      <div class = "AnimationLoadingPage__boules__boule3"></div>
+    </div>
+  </div>
+  <div class = "Corps">
   <header>
     <div class="LogoCentral"><img class = "LogoCentral__image" src="images/logo/ohmyfood.png" alt="Logo OhMyFood"></div>
   </header>
@@ -129,5 +140,6 @@
     <div  class = "Contact"><p>Contact</p></div>
 
   </footer>
+</div>
 </body>
 </html>
