--- a/PaletteDuGout.html
+++ b/PaletteDuGout.html
@@ -19,7 +19,8 @@
     <div class = "PhotoRestaurant"><img src="images/restaurants/laPaletteDuGout.jpg" alt="La palette du gout "></div>
     <div class = "Menu">
       <div class = "Menu__NomEtCoeur"><h1>La palette du goût</h1><div class = "Menu__NomEtCoeur__logo"><i class="far fa-heart"></i><i class="fas fa-heart"></i><div class ="Menu__NomEtCoeur__logo__ecran"></div></div></div>
-      <div class = "Menu__Cath"><p class = "Menu__Cath__text">ENTRÈES</p><div class = "Menu__Cath__soulignement"></div></div>
+      <div class = "Menu__CathegorieEntreePlat">
+        <div class="Menu__CathegorieEntreePlat__Cathegorie"><div class = "Menu__Cath"><p class = "Menu__Cath__text">ENTRÈES</p><div class = "Menu__Cath__soulignement"></div></div>
       <div class = "Menu__Vignette">
         <div class = "Menu__Vignette__Block">
           <div class="Menu__Vignette__titre" ><p>Fricassée d'escargot</p></div>
@@ -63,7 +64,8 @@
               <p>20€</p></div>
             <div class = "Menu__Vignette__ValidatorEtPrix__Validator"><div class="Menu__Vignette__ValidatorEtPrix__Validator__Icon"><i class="fas fa-check-circle"></i></div></div>
           </div>
-          </div>
+          </div></div>
+          <div class="Menu__CathegorieEntreePlat__Cathegorie">
           <div class = "Menu__Cath"><p class = "Menu__Cath__text">PLATS</p><div class = "Menu__Cath__soulignement"></div></div>
           <div class = "Menu__Vignette">
             <div class = "Menu__Vignette__Block">
@@ -103,7 +105,8 @@
                     <p>44€</p></div>
                   <div class = "Menu__Vignette__ValidatorEtPrix__Validator"><div class="Menu__Vignette__ValidatorEtPrix__Validator__Icon"><i class="fas fa-check-circle"></i></div></div>
                 </div>
-                </div>
+                </div></div></div>
+                
                 <div class = "Menu__Cath"><p class = "Menu__Cath__text">DESSERTS</p><div class = "Menu__Cath__soulignement"></div></div>
                 <div class = "Menu__Vignette">
                   <div class = "Menu__Vignette__Block">
