Finalisation de mise en page

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <p class = "Devenir">Devenir partenaire</p>
     </div>
     <div class= "Mention"><p >Mention légales</p></div>
-    <div  class = "Contact"><p>Contact</p></div>
+    <div  class = "Contact"><a href="mailto:pierreinza@hotmail.fr" style="text-decoration: none;color: white;"><p>Contact</p></a></div>
 
   </footer>
 </div>
