--- a/ALaFrançaise.html
+++ b/ALaFrançaise.html
@@ -19,6 +19,9 @@
     <div class = "PhotoRestaurant"><img src="images/restaurants/ALaFrancaise.jpg" alt="La palette du gout "></div>
     <div class = "Menu">
       <div class = "Menu__NomEtCoeur"><h1>À la française</h1><div class = "Menu__NomEtCoeur__logo"><i class="far fa-heart"></i><i class="fas fa-heart"></i><div class ="Menu__NomEtCoeur__logo__ecran"></div></div></div>
+      <div class = "Menu__CathegorieEntreePlat">
+        <div class="Menu__CathegorieEntreePlat__Cathegorie">
+      
       <div class = "Menu__Cath"><p class = "Menu__Cath__text">ENTRÈES</p><div class = "Menu__Cath__soulignement"></div></div>
       <div class = "Menu__Vignette">
         <div class = "Menu__Vignette__Block">
@@ -59,7 +62,8 @@
               <p>20€</p></div>
             <div class = "Menu__Vignette__ValidatorEtPrix__Validator"><div class="Menu__Vignette__ValidatorEtPrix__Validator__Icon"><i class="fas fa-check-circle"></i></div></div>
           </div>
-          </div>
+          </div></div>
+            <div class="Menu__CathegorieEntreePlat__Cathegorie">
           <div class = "Menu__Cath"><p class = "Menu__Cath__text">PLATS</p><div class = "Menu__Cath__soulignement"></div></div>
           <div class = "Menu__Vignette">
             <div class = "Menu__Vignette__Block">
@@ -99,7 +103,7 @@
                     <p>44€</p></div>
                   <div class = "Menu__Vignette__ValidatorEtPrix__Validator"><div class="Menu__Vignette__ValidatorEtPrix__Validator__Icon"><i class="fas fa-check-circle"></i></div></div>
                 </div>
-                </div>
+                </div></div></div>
                 <div class = "Menu__Cath"><p class = "Menu__Cath__text">DESSERTS</p><div class = "Menu__Cath__soulignement"></div></div>
                 <div class = "Menu__Vignette">
                   <div class = "Menu__Vignette__Block">
@@ -157,7 +161,7 @@
                         <p class = "Devenir">Devenir partenaire</p>
                         </div>
                         <div class= "Mention"><p >Mention légales</p></div>
-                        <div  class = "Contact"><p>Contact</p></div>
+                        <div  class = "Contact"><a href="mailto:pierreinza@hotmail.fr" style="text-decoration: none;color: white;"><p>Contact</p></a></div>
                     
                       </footer>
       </div>
