--- a/ALaFrançaise.html
+++ b/ALaFrançaise.html
@@ -161,7 +161,7 @@
                         <p class = "Devenir">Devenir partenaire</p>
                         </div>
                         <div class= "Mention"><p >Mention légales</p></div>
-                        <div  class = "Contact"><a href="mailto:pierreinza@hotmail.fr" style="text-decoration: none;color: white;"><p>Contact</p></a></div>
+                        <div  class = "Contact"><a href="mailto:pierreinza@hotmail.fr"><p>Contact</p></a></div>
                     
                       </footer>
       </div>
